提交Excel20个常用命令笔记

--- a/软考/第三章 软件工程 .md
+++ b/软考/第三章 软件工程 .md
@@ -131,6 +131,8 @@
 
 
 
+### 需求获取
+
 > 需求获取
 
 ![image-20220104154027655](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220104154027655.png)
@@ -144,7 +146,7 @@
 - 期望需求：用户未明确提出的需求，最容易形成分歧的，隐含的需求
 - 兴奋需求：客户未提出且不觉的要做但实际上完成了（不该做的）
 
-
+### 需求分析
 
 > 需求分析
 
@@ -152,11 +154,112 @@
 
 ![image-20220104163055768](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220104163055768.png)
 
-- 数据流图（DFD）
+- 功能模型--数据流图（DFD）
 
 以一个在线教育平台系统的开发为例，其 DFD为
 
 ![image-20220104163341605](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220104163341605.png)
 
--  分析系统的用户：学员、培训部、辅导老师 
+-  分析系统的用户：学员、培训部、辅导老师 ，然后逐步分解，分析需求
+
+然后是行为模型--状态转换图 
+
+![image-20220111162307476](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220111162307476.png)
+
+数据模型--E-R图
+
+
+
+> OOA--面向对象分析
+
+![image-20220111163427629](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220111163427629.png)
+
+- 对象：指现实生活中的人或物，包含属性、方法、ID，对象经抽象之后形成类
+- **继承关系是泛化关系的反关系，也就是说子类是从父类继承的，子类是对父类的泛化。**其实都是讲的同一层关系, 但是是从不同的出发点, 一个是从父类往下看, 一个是从子类网上看.
+- 接口的多种不同的实现方式即为*多态*。 
+
+  
+
+![image-20220112151047379](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220112151047379.png)
+
+- UML：统一建模语言，与具体开发技术无关的语言，用于需求分析和软件设计两个阶段中模型构建，UML包含一系列图，用例图、类图……
+
+![image-20220112155901225](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220112155901225.png)
+
+
+
+
+
+### UML图
+
+> UML图
+
+![image-20220112152642185](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220112152642185.png)
+
+- 部署图：系统开发完成后，规划系统中各个软件构建的部署方式
+- 结构图：除了部署图，都是什么和什么之间的关系
+- 时序图、顺序图、序列图是同样的
+- 通信图强调交互关系、协作关系，与时序图的关系--时序图和通信图都是交互图，只不过他们的关注点有所差别。时序图着重于时间顺序，而通信图则关注的是对象之间的组织关系，通信图中的时间顺序可以从消息序号中获得。与类图的关系--通信图是将类实例化之后的调用关系。这里可以用中国象棋来理解一下，类图就好比棋子，而通信图则是具体的某一局对弈。
+- 组合结构图是多种静态图（结构图）的组合图，交互概览图是多种动态图（行为图）的组合图
+
+> 用例图
+
+![image-20220124140205511](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220124140205511.png)
+
+- 外部触发因素还可以是时间、温度等
+- 用例图关系：包含关系、拓展关系、泛化关系
+
+![image-20220124145018915](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220124145018915.png)
+
+![image-20220124145518652](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220124145518652.png)
+
+- 包含关系中，所包含的部分是一个公共部分，其他地方也会用到
+- 拓展关系中的拓展用例，可能用到也可能用不到，这点也是区分包含和拓展的关键点
+- 包含和泛化的区分是有没有父子关系，例如，电话注册和网上注册都是课程注册的一种方式，存在父子关系（父——课程注册，子——电话/网上注册）
+- 包含关系和 拓展关系都是一种依赖关系（少见的说法），包含关系也叫使用关系
+
+> 类图和对象图
+
+![image-20220124161828996](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220124161828996.png)
+
+![image-20220124163447327](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220124163447327.png)
+
+![image-20220124165219942](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220124165219942.png)
+
+> 顺序图
+
+![image-20220126164958158](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220126164958158.png)
+
+
+
+ 
+
+
+
+### UML 4+1视图（架构4+1视图）
+
+![image-20220112154803426](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220112154803426.png)
+
+- 4：逻辑视图（表现系统的功能）、实现视图（针对程序员，通过物理代码和组件呈现）、进程视图（关键词：并发）、部署视图（软件、硬件的部署关系）
+- 1：用例视图，与其他4个视图均有关系
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
