第三章学习完成，并完成了部分习题，冲刺习题未做

--- a/软考/第三章 软件工程 .md
+++ b/软考/第三章 软件工程 .md
@@ -230,9 +230,27 @@
 
 ![image-20220126164958158](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220126164958158.png)
 
+> 活动图
+
+类似于流程图，但流程图不可以表示并发而活动图可以
+
+![image-20220211142335464](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211142335464.png)
+
+-  活动图的每一个节点代表用户或系统要完成的一个动作 
+- 活动图还有另一种表达形式，泳道式活动图，按照执行角色对活动图进行划分
+- ![image-20220211142858263](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211142858263.png)
 
 
- 
+
+> 状态图：
+
+![image-20220211143021345](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211143021345.png)
+
+> 通信图
+
+![image-20220211144343524](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211144343524.png)
+
+
 
 
 
@@ -243,23 +261,294 @@
 - 4：逻辑视图（表现系统的功能）、实现视图（针对程序员，通过物理代码和组件呈现）、进程视图（关键词：并发）、部署视图（软件、硬件的部署关系）
 - 1：用例视图，与其他4个视图均有关系
 
+### 需求开发
+
+> 需求定义
+
+产品：SRS：需求规格说明书
+
+![image-20220211145712155](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211145712155.png)
 
 
 
+> 需求验证
+
+![image-20220211145833203](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211145833203.png)
+
+### 需求管理
+
+> 定义需求基线
+
+![image-20220211154409510](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211154409510.png)
+
+> 需求跟踪
+
+![image-20220211154700838](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211154700838.png)
+
+- 左下矩阵，若原始需求在某用例中得以体现，则在对应的方框打钩；若某个用例对应的那一列没有实现任何需求，说明原始需求并不要求做该用例所对应的功能，即--兴奋需求；
+- 所谓的反向跟踪，即从下游产品，反推到源头
+
+> 变更控制
+
+在需求基线形成之后，若需求发生改变的流程
+
+![image-20220211155705758](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211155705758.png)
+
+- CCB——变更控制委员会
+- 技术变更也是需求变更的一种
 
 
 
+> 软件系统建模
 
 
 
+![image-20220211161531039](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211161531039.png)
+
+- 虚线上方对应逆向工程，下方正向工程
+
+> 常见的建模方法
+
+![image-20220211162206434](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211162206434.png)
+
+- UML各种图都用于建模
+
+
+## 系统设计
+
+### 人机界面设计
+
+![image-20220211162512915](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211162512915.png)
+
+- 三大黄金法则：置于用户控制之下、减少用户的记忆负担、保持界面的一致性 
+
+### 结构化设计
+
+![image-20220211164908203](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211164908203.png)
+
+- 概要设计：模块的划分，模块接口的设计
+
+- 详细设计：模块内
+
+- 扇入：是指直接调用该模块的上级模块的个数。扇入大表示模块的复用程序高。 
+
+  扇出：是指该模块直接调用的下级模块的个数。扇出大表示模块的复杂度高，需要控制和协调过多的下级模块；但扇出过小（例如总是1）也不好。
+
+  扇出过大一般是因为缺乏中间层次，应该适当增加中间层次的模块。扇出太小时可以把下级模块进一步分解成若干个子功能模块，或者合并到它的上级模块中去。
+
+![image-20220211165606617](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220211165606617.png)
+
+- 需要了解内聚合耦合类型所对应的描述 
+
+### 面向对象设计
+
+![image-20220214153111395](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214153111395.png)
 
 
 
+![image-20220214153134092](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214153134092.png)
+
+- 单一职责原则：高内聚、低耦合
+- 开放-封闭原则：尽量使用拓展的方式，拓展类来增加类，不影响原有类的功能
+- 依赖倒置原则：灵活，面向过程的开发，上层调用下层，上层依赖于下层，当下层剧烈变动时上层也要跟着变动，这就会导致模块的复用性降低而且大大提高了开发的成本。面向对象的开发很好的解决了这个问题，一般情况下抽象的变化概率很小，让用户程序依赖于抽象，实现的细节也依赖于抽象。即使实现细节不断变动，只要抽象不变，客户程序就不需要变化。这大大降低了客户程序与实现细节的耦合度。
+
+![image-20220214160400715](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214160400715.png)
+
+- 架构模式：高层，面向全局
+- 设计模式：中层，语言无关
+- 惯用法：底层，语言惯用法
+
+![image-20220214160808328](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214160808328.png)
+
+-  图上所有的23种模式都是对象模式，下划线的既可以是对象模式，也可以是类模式
+- 考查方式：设计模型三种类型定位以及解决了什么问题，例如创建型模式解决的是创建了对象、设计模式分类、设计模式应用场景和特点（主要考法）
+- 类模式：静态类，不用实例化即可应用
+- 以下对具体模式进行解读
+
+> 创建性模式
+
+![image-20220214162237915](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214162237915.png)
+
+- 工厂方法模式：
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214162503206.png" alt="image-20220214162503206" style="zoom:50%;" />
+
+临时性、动态性创建对象，一开始不确定创建对象的类型
+
+- 抽象工厂模式：
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214162702239.png" alt="image-20220214162702239" style="zoom: 33%;" />
+
+例如：开发一个系统需要支持多种数据库
+
+生产成系列的对象
+
+- 构建器模式
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214163047624.png" alt="image-20220214163047624" style="zoom:33%;" />
+
+创建对象的流程固化，至于每一步是灵活搭配的，让一个复杂对象的创建流程没有遗漏
+
+- 原型模式：克隆对象
+
+- 单例模式：比如说数据库连接池，这种模式涉及到一个单一的类，该类负责创建自己的对象，同时确保只有单个对象被创建。这个类提供了一种访问其唯一的对象的方式，可以直接访问，不需要实例化该类的对象。
+
+  **注意：**
+
+  - 1、单例类只能有一个实例。
+  - 2、单例类必须自己创建自己的唯一实例。
+  - 3、单例类必须给所有其他对象提供这一实例。
+
+  **主要解决：**一个全局使用的类频繁地创建与销毁。
+
+  **何时使用：**当您想控制实例数目，节省系统资源的时候。
+
+  **如何解决：**判断系统是否已经有这个单例，如果有则返回，如果没有则创建。
+
+  **关键代码：**构造函数是私有的。
+
+> 结构性模式
+
+![image-20220214163745178](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214163745178.png)
+
+- 适配器模式
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214164155678.png" alt="image-20220214164155678" style="zoom:33%;" />
+
+适用场景：接口不匹配时使用，充电器：电源适配器
+
+- 桥接模式
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214164710162.png" alt="image-20220214164710162" style="zoom: 33%;" />
+
+变化因素多，多个变化维度组合
+
+- 组合模式
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220214164906914.png" alt="image-20220214164906914" style="zoom:33%;" />
+
+ 
+
+- 装饰模式
+
+​       灵活附加职责
+
+- 代理模式
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220215103119630.png" alt="image-20220215103119630" style="zoom:33%;" />
+
+ 
+
+A和B打交道，认为代理就是B，1V多
+
+> 行为型模式
+
+![image-20220215104340089](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220215104340089.png)
+
+![image-20220216103823173](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216103823173.png)
 
 
 
+- 职责链模式
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220215104544869.png" alt="image-20220215104544869" style="zoom:50%;" />
+
+- 命令模式
+
+和备忘录模式进行对比，命令模式==可撤销==
+
+- 解释器模式 
+
+关键词：自定义
+
+- 中介者模式 （和代理模式进行对比）
+
+![image-20220215103417452](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220215103417452.png)
+
+将网状结构变成了星型结构，极大地减少了沟通的路径数，简化系统交互
+
+关键词 ：多对多，不直接应用
+
+- 观察者模式
+
+也叫做订阅发布模式
+
+- 策略模式
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216104630441.png" alt="image-20220216104630441" style="zoom:33%;" />
+
+关键词：多方案切换
+
+- 模板方法模式
+
+部分固定的内容先固化，后期根据需要填入新的内容
 
 
 
+## 软件测试 
+
+### 软件测试
+
+> 测试类型
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216155909385.png" alt="image-20220216155909385" style="zoom:50%;" />
+
+- 修改后应进行回归测试，因为修改bug可能会引入新的bug
+
+- 静态测试：纯手工，不依靠计算机（不需要计算机运行看结果）
+
+> 测试用例设计
+
+![image-20220216160951445](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216160951445.png)
+
+- 错误推测：用自身经验推测
+- 等价类划分：选择测试用例时选择不同的测试用例
+- 语句覆盖最弱，路径覆盖最强
+
+> 测试阶段
+
+![image-20220216161632686](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216161632686.png)
+
+<img src="C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216162042516.png" alt="image-20220216162042516" style="zoom:33%;" />
+
+- Alpha测试和Beta测试是产品测试，前者是用户在开发环境下 测试，Beta是真实情况下用户做的测试，项目一般不用
+
+![image-20220216164744864](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216164744864.png)
 
 
+
+### 软件调试
+
+![image-20220216164922247](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220216164922247.png)
+
+
+
+## 系统运行与软件维护
+
+### 系统转换计划
+
+> 遗留系统演化策略
+
+![image-20220217092715642](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220217092715642.png)
+
+![image-20220217093143491](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220217093143491.png)
+
+
+
+> 新旧系统的转换策略
+
+![image-20220217093420871](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220217093420871.png)
+
+
+
+> 数据转换与迁移
+
+![image-20220217093724455](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220217093724455.png)
+
+
+
+### 运行与维护
+
+![image-20220217093952769](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220217093952769.png)
+
+- 适应性维护：操作系统变化，软件运行环境变化，导致系统不能正常运行
