第四章习题收尾，开始进入论文练习阶段

--- a/软考/第四章软件架构设计.md
+++ b/软考/第四章软件架构设计.md
@@ -1,4 +1,4 @@
-# 提要
+#  提要
 
 ![image-20220217154748522](C:\Users\shasha\AppData\Roaming\Typora\typora-user-images\image-20220217154748522.png)
 
@@ -158,11 +158,9 @@
 
 ## 层次架构风格（考的比较多）
 
+### 总分类
+
 <img src="D:\Typora\pictures\image-20220218161802277.png" alt="image-20220218161802277" style="zoom:50%;" />
-
-![image-20220218163718437](D:\Typora\pictures\image-20220218163718437.png)
-
-
 
 > 两层C/S
 
@@ -190,3 +188,424 @@
 
 ![image-20220218163625493](D:\Typora\pictures\image-20220218163625493.png)
 
+### 三层B/S层次架构风格
+
+![image-20220218163718437](D:\Typora\pictures\image-20220218163718437.png)
+
+数据架构层对应的是数据库
+
+#### MVC
+
+MVC存在分歧，有人 认为是 一种架构风格，也有人认为是设计模式
+
+![image-20220221142712682](D:\Typora\pictures\image-20220221142712682.png)
+
+- MVC架构风格有两种，主动型和被动型
+
+#### MVP
+
+![image-20220221143607642](D:\Typora\pictures\image-20220221143607642.png)
+
+- MVP的特点都基于解耦
+
+#### MVVM
+
+![image-20220221143743417](D:\Typora\pictures\image-20220221143743417.png)
+
+
+
+#### RIA
+
+![image-20220221144119670](D:\Typora\pictures\image-20220221144119670.png)
+
+
+
+#### SOA
+
+![image-20220221144924930](D:\Typora\pictures\image-20220221144924930.png)
+
+- 使用SOA处理遗留系统，将 遗留系统以服务的形式进行封装、集成
+- 这里的服务总线为中介者
+
+![image-20220221145635759](D:\Typora\pictures\image-20220221145635759.png)
+
+![image-20220221145747319](D:\Typora\pictures\image-20220221145747319.png)
+
+- 绑定分为静态绑定和动态绑定，静态绑定通过Ip和端口号绑定，不需要通过注册中心；动态绑定通过服务名，由服务注册中心告知IP和端口号
+
+
+
+![image-20220221150946118](D:\Typora\pictures\image-20220221150946118.png)
+
+- ESB，企业服务总线
+- 位置透明性是指，可以不需要了解具体的地址
+- ESB不仅包含注册中心的 功能，还增加了其他的功能 
+
+![image-20220221153426175](D:\Typora\pictures\image-20220221153426175.png)
+
+
+
+![image-20220221153449585](D:\Typora\pictures\image-20220221153449585.png)
+
+![image-20220221154205592](D:\Typora\pictures\image-20220221154205592.png)
+
+![image-20220221154225433](D:\Typora\pictures\image-20220221154225433.png)
+
+
+
+#### 微服务
+
+<img src="D:\Typora\pictures\image-20220221154541474.png" alt="image-20220221154541474" style="zoom: 50%;" />
+
+<img src="D:\Typora\pictures\image-20220221160052238.png" alt="image-20220221160052238" style="zoom:33%;" />
+
+<img src="D:\Typora\pictures\image-20220221160237757.png" alt="image-20220221160237757" style="zoom: 50%;" />
+
+![image-20220221160629796](D:\Typora\pictures\image-20220221160629796.png)
+
+![image-20220221160943659](D:\Typora\pictures\image-20220221160943659.png)
+
+
+
+#### MDA（模型驱动架构）
+
+![image-20220221161340582](D:\Typora\pictures\image-20220221161340582.png)
+
+![image-20220221161615171](D:\Typora\pictures\image-20220221161615171.png)
+
+- PIM：平台无关模型，典型代表UML
+- PSM：平台相关模型
+- 需要知道有变换工具
+
+
+
+# 架构描述语言（ADL）
+
+![image-20220222152921805](D:\Typora\pictures\image-20220222152921805.png)
+
+![image-20220222153817570](E:\GitHub\study\软考\image-20220222153817570.png)
+
+
+
+# 特定领域软件架构（DSSA）
+
+> ## 基本活动
+
+![image-20220222154222866](D:\Typora\pictures\image-20220222154222866.png)
+
+> ## 领域分析机制
+
+![image-20220222154708192](D:\Typora\pictures\image-20220222154708192.png)
+
+- 领域专家类似于军师，提建议但是不做具体的活
+
+> ## 建立过程
+
+了解即可 
+
+![image-20220222155048151](D:\Typora\pictures\image-20220222155048151.png)
+
+> ## 三层次模型
+
+要求掌握
+
+![image-20220222155124899](D:\Typora\pictures\image-20220222155124899.png)
+
+理解三种人员的区别
+
+- 领域开发环境：开发共性部分
+- 领域特定的应用开发环境：利用共性部分，结合用户需求进行调整、定型
+- 应用执行环境
+
+# 基于架构的软件开发方法
+
+## 基于架构的软件设计（ABSD）（重要）
+
+![image-20220222155627885](D:\Typora\pictures\image-20220222155627885.png)
+
+- 质量需求是非功能性的，比如可靠性、性能、可维护等
+
+- 场景示意图如下：
+
+<img src="D:\Typora\pictures\image-20220222161106459.png" alt="image-20220222161106459" style="zoom: 50%;" />
+
+## 开发过程
+
+![image-20220222161313330](D:\Typora\pictures\image-20220222161313330.png)
+
+![image-20220222163254183](D:\Typora\pictures\image-20220222163254183.png)
+
+![image-20220222164040682](D:\Typora\pictures\image-20220222164040682.png)
+
+
+
+# 软件架构评估
+
+架构评估对应 上节开发过程中的架构复审
+
+## 质量属性
+
+架构设计非常重视非功能性需求
+
+![image-20220223094321263](D:\Typora\pictures\image-20220223094321263.png)
+
+- 可用性是在某个考察时间，系统能够正常运行的概率或时间占有率期望值。考察时间为指定瞬间，则称瞬时可用性；考察时间为指定时段，则称时段可用性；考察时间为连续使用期间的任一时刻，则称固有可用性。
+
+![image-20220223100734727](D:\Typora\pictures\image-20220223100734727.png)
+
+- 可靠性决定了可用性
+
+> 小习题：下面的每一条对应哪一个质量属性
+
+![image-20220223100850583](D:\Typora\pictures\image-20220223100850583.png)
+
+- 性能
+- 安全性（既可以选可靠又可以选可用 ，一般选可用性；若既含有可用又含有可靠，选可靠，这题里有关键词授权，因此是安全性）
+- 可修改性
+- 可用性
+- 可修改性（有具体数字（肺功能数字化指标）的一般不是功能性，）
+- 性能
+- 可用性（转到备用，说明接下来可用）
+
+
+
+## 软件架构评估
+
+![image-20220223102821363](D:\Typora\pictures\image-20220223102821363.png)
+
+- 权衡点是敏感点的一种，敏感点包含了权衡点
+
+- 非风险点：****，这个要求，是可以接受的
+- 架构评估的三种方式：基于调查问卷 、基于度量、基于场景
+
+## SAAM
+
+![image-20220223104200505](D:\Typora\pictures\image-20220223104200505.png)
+
+- 输入元素：问题描述 、需求说明、架构描述
+- 场景开发：本质上是为了获取非功能性需求
+
+
+
+## ATAM
+
+![image-20220223105010179](D:\Typora\pictures\image-20220223105010179.png)
+
+- 实用性：可用性
+- 多种质量属性的平衡和折中
+- 需求可能很多，但是需求的优先级不同，在架构评估中，会考虑需求的优先级，也即场景的优先级，场景的优先级导致了质量属性的优先级
+
+> 质量效用树
+
+![img](https://img-blog.csdnimg.cn/20191020102431354.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjUyODI2Ng==,size_16,color_FFFFFF,t_70)
+
+# 软件产品线
+
+![image-20220225154029684](D:\Typora\pictures\image-20220225154029684.png)
+
+- DSSA 特定软件架构
+
+## 过程模型
+
+了解即可
+
+![image-20220225154333667](D:\Typora\pictures\image-20220225154333667.png)
+
+- 上面做共性
+- 下面完成个性化内容
+
+![image-20220225160045651](D:\Typora\pictures\image-20220225160045651.png)
+
+
+
+## 建立方式 
+
+![image-20220225160135118](D:\Typora\pictures\image-20220225160135118.png)
+
+- 基于现有产品的演化方式的，比较稳；基于全新产品线的革命式风险较大。
+
+
+
+## 组织结构
+
+![image-20220228143207782](D:\Typora\pictures\image-20220228143207782.png)
+
+- 核心资源小组做核心产品，另有一个应用组做个性胡应用，实施
+
+
+
+# 构件和中间件技术
+
+## 构件概念
+
+> ## 概念
+
+![image-20220228143558830](D:\Typora\pictures\image-20220228143558830.png)
+
+- 构件的特性
+
+![image-20220228144022337](D:\Typora\pictures\image-20220228144022337.png)
+
+
+
+> ## 构件的复用
+
+![image-20220228144148540](D:\Typora\pictures\image-20220228144148540.png)
+
+![image-20220228144428064](D:\Typora\pictures\image-20220228144428064.png)
+
+![image-20220228144502078](D:\Typora\pictures\image-20220228144502078.png)
+
+![image-20220228145312663](D:\Typora\pictures\image-20220228145312663.png)
+
+![image-20220228145212727](D:\Typora\pictures\image-20220228145212727.png)
+
+
+
+## 中间件概念
+
+> ## 概念
+
+中间件是构件的一种，我们把它定义为一类系统软件
+
+至少有一部分支撑其他应用软件的是系统软件
+
+为用户提供服务的是应用软甲
+
+![image-20220228150541335](D:\Typora\pictures\image-20220228150541335.png)
+
+> ## 优点
+
+![image-20220228151233030](D:\Typora\pictures\image-20220228151233030.png)
+
+提高开发效率、复用性；降低开发难度
+
+
+
+> ## Corba（公共对象去请求代理体系结构）
+
+![image-20220228164904579](D:\Typora\pictures\image-20220228164904579.png)
+
+<img src="D:\Typora\pictures\image-20220301144643078.png" alt="image-20220301144643078" style="zoom:50%;" />
+
+
+
+<img src="D:\Typora\pictures\image-20220301144730674.png" alt="image-20220301144730674" style="zoom:50%;" />
+
+
+
+
+
+# Web架构设计
+
+> ## 典型应用架构
+
+![image-20220301144901312](D:\Typora\pictures\image-20220301144901312.png)
+
+ ![image-20220301145748471](D:\Typora\pictures\image-20220301145748471.png)
+
+## 架构演变
+
+![image-20220301150051402](D:\Typora\pictures\image-20220301150051402.png)
+
+![image-20220301150446319](D:\Typora\pictures\image-20220301150446319.png)
+
+![image-20220301151121146](D:\Typora\pictures\image-20220301151121146.png)
+
+## 负载均衡
+
+![image-20220301151524395](D:\Typora\pictures\image-20220301151524395.png)
+
+![image-20220301151843689](D:\Typora\pictures\image-20220301151843689.png)
+
+- DNS：用于域名解析，将域名解析为IP地址
+
+![image-20220301152151696](D:\Typora\pictures\image-20220301152151696.png)
+
+![image-20220301152410313](D:\Typora\pictures\image-20220301152410313.png)
+
+- DNS有延迟，多级缓存机制 
+
+
+
+![image-20220301155714040](D:\Typora\pictures\image-20220301155714040.png)
+
+![image-20220301160446807](D:\Typora\pictures\image-20220301160446807.png)
+
+
+
+![image-20220301160120686](D:\Typora\pictures\image-20220301160120686.png)
+
+
+
+## 数据库和缓存
+
+![image-20220301161202971](D:\Typora\pictures\image-20220301161202971.png)
+
+- 主库 一个，从库多个；读数据可以从不同的从库读取
+- 主库职责单一，写操作和同步 操作 ，压力减少
+
+
+
+![image-20220301161749074](D:\Typora\pictures\image-20220301161749074.png)
+
+![image-20220301162404661](D:\Typora\pictures\image-20220301162404661.png)
+
+- 重点了解一下redis
+
+![image-20220301162748917](D:\Typora\pictures\image-20220301162748917.png)
+
+![image-20220301163225944](D:\Typora\pictures\image-20220301163225944.png)
+
+![image-20220301163755573](D:\Typora\pictures\image-20220301163755573.png)
+
+
+
+## CDN(内容分发网络)
+
+![image-20220310094527579](D:\Typora\pictures\image-20220310094527579.png)
+
+- CDN含有负载均衡的思想，选择最近的站点可以认为是一种负载均衡策略
+
+
+
+![image-20220310095627373](D:\Typora\pictures\image-20220310095627373.png)
+
+- 效率低
+
+
+
+![image-20220310100159330](D:\Typora\pictures\image-20220310100159330.png)
+
+![image-20220310100623975](D:\Typora\pictures\image-20220310100623975.png)
+
+- 记住5个原则
+
+
+
+![image-20220310101045311](D:\Typora\pictures\image-20220310101045311.png)
+
+
+
+## 中台
+
+![image-20220310101735067](D:\Typora\pictures\image-20220310101735067.png)
+
+![image-20220310103513749](D:\Typora\pictures\image-20220310103513749.png)
+
+![image-20220310110243274](D:\Typora\pictures\image-20220310110243274.png)
+
+- 中台类似于云构件
+
+- 中台又进一步分为数据中台和数据中台
+
+
+
+> 分辨以下属于那种中台
+
+![image-20220310135506985](D:\Typora\pictures\image-20220310135506985.png)
+
+- 业务
+- 数据
+- 业务
+- 数据
